gitops/apps/qbittorrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: bittorrent-tcp
      port: 6881
      targetPort: 6881
      protocol: TCP
    - name: bittorrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
